--- a/package.json
+++ b/package.json
@@ -14,15 +14,20 @@
     "babel-core": "^6.3.15",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.3.13",
     "css-loader": "^0.23.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
     "node-sass": "^3.4.2",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.9"
   },
   "dependencies": {
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
     "three": "^0.76.1"
   }
 }
