--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "traversal",
+  "name": "scenic",
   "version": "0.0.0",
   "description": "",
   "main": "app/index.js",
@@ -8,7 +8,7 @@
     "build": "webpack --progress",
     "watch": "webpack -w --progress"
   },
-  "author": "",
+  "author": "brandonlilly",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.3.15",
